Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
   workingDirectory: '$(system.defaultWorkingDirectory)/Backend'
 
 - script: |
-    ls -la $(system.defaultWorkingDirectory/Backend)
+    ls -la $(system.defaultWorkingDirectory)/Backend
   displayName: 'List files in the working directory'
 
 - script: |
