--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,3 +38,10 @@ steps:
     go build -v .
   workingDirectory: '$(system.defaultWorkingDirectory)/Backend'
   displayName: 'Get dependencies, then build'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(GOBIN)'
+    ArtifactName: 'go-build-output'
+    publishLocation: 'Container'
+  displayName: 'Publish build artifacts'
