--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,7 @@ steps:
     testResultsFiles: '$(system.defaultWorkingDirectory)/Backend/test-results.xml'
     failTaskOnFailedTests: true
   displayName: 'Publish test results'
+  condition: always()
 
 - task: PublishBuildArtifacts@1
   inputs:
