--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,49 +13,56 @@ pool:
 variables:
   GOBIN:  '$(system.defaultWorkingDirectory)/Backend/bin' # Go binaries path
 
-steps:
-- script: |
-    mkdir -p '$(GOBIN)'
-    echo '##vso[task.prependpath]$(GOBIN)'
-  displayName: 'Set up the Go workspace'
-  workingDirectory: '$(system.defaultWorkingDirectory)/Backend'
+stages:
+- stage: BuildAndTest
+  displayName: 'Build And Test'
+  jobs:
+  - job: BuildAndTestBack
+    displayName: 'Build and Test Backend'
+    steps:
+    - script: |
+        mkdir -p '$(GOBIN)'
+        echo '##vso[task.prependpath]$(GOBIN)'
+      displayName: 'Set up the Go workspace'
+      workingDirectory: '$(system.defaultWorkingDirectory)/Backend'
 
-- script: |
-    ls -la $(system.defaultWorkingDirectory)/Backend
-  displayName: 'List files in the working directory'
+    - script: |
+        ls -la $(system.defaultWorkingDirectory)/Backend
+      displayName: 'List files in the working directory'
+  
+    - script: |
+        go version
+        if [ ! -f go.mod ]; then
+            go mod init
+        fi
+        go mod tidy
+        go mod download
+        if [ -f Gopkg.toml ]; then
+            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            dep ensure
+        fi
+        go build -v .
+      workingDirectory: '$(system.defaultWorkingDirectory)/Backend'
+      displayName: 'Get dependencies, then build'
 
-- script: |
-    go version
-    if [ ! -f go.mod ]; then
-        go mod init example.com/myproject # replace with your module path
-    fi
-    go mod tidy
-    go mod download
-    if [ -f Gopkg.toml ]; then
-        curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-        dep ensure
-    fi
-    go build -v .
-  workingDirectory: '$(system.defaultWorkingDirectory)/Backend'
-  displayName: 'Get dependencies, then build'
+    - script: |
+        go install github.com/jstemmer/go-junit-report@latest
+        go test -v ./... | go-junit-report > $(system.defaultWorkingDirectory)/Backend/test-results.xml
+      workingDirectory: '$(system.defaultWorkingDirectory)/Backend'
+      displayName: 'Run tests and generate test report'
 
-- script: |
-    go install github.com/jstemmer/go-junit-report@latest
-    go test -v ./... | go-junit-report > $(system.defaultWorkingDirectory)/Backend/test-results.xml
-  workingDirectory: '$(system.defaultWorkingDirectory)/Backend'
-  displayName: 'Run tests and generate test report'
+    - task: PublishTestResults@2
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: '$(system.defaultWorkingDirectory)/Backend/test-results.xml'
+        failTaskOnFailedTests: true
+      displayName: 'Publish test results'
+      condition: always()
 
-- task: PublishTestResults@2
-  inputs:
-    testResultsFormat: 'JUnit'
-    testResultsFiles: '$(system.defaultWorkingDirectory)/Backend/test-results.xml'
-    failTaskOnFailedTests: true
-  displayName: 'Publish test results'
-  condition: always()
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(system.defaultWorkingDirectory)/Backend'
+        ArtifactName: 'go-build-output'
+        publishLocation: 'Container'
+      displayName: 'Publish build artifacts'
 
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(system.defaultWorkingDirectory)/Backend'
-    ArtifactName: 'go-build-output'
-    publishLocation: 'Container'
-  displayName: 'Publish build artifacts'
