Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,7 +77,7 @@ stages:
           buildType: 'current'
           downloadType: 'single'
           artifactName: 'go-build-output'
-          downloadPath: '$(System.ArtifactsDirectory)/backend'
+          downloadPath: '$(System.ArtifactsDirectory)/backend/golang-api'
       - task: AzureRmWebAppDeployment@4
         inputs:
           ConnectionType: 'AzureRM'
