Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -138,6 +138,9 @@ stages:
             scriptLocation: inlineScript
             inlineScript: |
               az acr login --name $(acrLoginServer)
+        
+        - script: ls -lR
+          workingDirectory: $(Pipeline.Workspace)/$(backDrop)
     
         - task: Docker@2
           displayName: 'Build API Docker image'
