--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,11 @@ variables:
   backImageName: 'employee-crud-api'
   backImageTag: 'latest'
 
+# Azure App Services
+  AppServicePlanLinux: 'MirandaASP'
+  backAppServiceQA: 'chattas-backend-qa'
+
+
 stages:
 # -------------------------------------------------------------------------------
 # |                 STAGE BUILD AND TEST FRONTEND AND BACKEND                   |
@@ -163,3 +168,46 @@ stages:
             command: push
             repository: $(acrLoginServer)/$(backImageName)
             tags: 'latest'
+
+# -------------------------------------------------------------------------------
+# |     STAGE DEPLOY FRONTEND AND BACKEND TO AZURE APP SERVICES QA              |
+# -------------------------------------------------------------------------------
+- stage: DeployImagesToAppServiceQA
+  displayName: 'Deploy Docker Images to Azure App Service (QA)'
+  dependsOn: 
+  - BuildAndTest
+  - DockerBuildAndPush
+  condition: succeeded()
+  jobs:
+# -------------------------------------------------------------------------------
+# |               DEPLOY API TO AZURE APP SERVICE                               |
+# -------------------------------------------------------------------------------
+    - job: DeployAPIImageToAppServiceQA
+      displayName: 'Deploy API to Azure App Service (QA)'
+      pool:
+        vmImage: 'ubuntu-latest'
+      steps:
+        - task: AzureCLI@2
+          displayName: 'Create API Azure App Service resource and configure image'
+          inputs:
+            azureSubscription: '$(ConnectedServiceName)'
+            scriptType: 'bash'
+            scriptLocation: 'inlineScript'
+            inlineScript: |
+              # Check if API App Service already exists
+              if ! az webapp list --query "[?name=='$(backAppServiceQA)' && resourceGroup=='$(ResourceGroupName)'] | length(@)" -o tsv | grep -q '^1$'; then
+                echo "API App Service doesn't exist. Creating new..."
+                # Create App Service without specifying container image
+                az webapp create --resource-group $(ResourceGroupName) --plan $(AppServicePlanLinux) --name $(backAppServiceQA) --deployment-container-image-name "nginx"  # Especifica una imagen temporal para permitir la creación
+              else
+                echo "API App Service already exists. Updating image..."
+              fi
+
+              # Configure App Service to use Azure Container Registry (ACR)
+              az webapp config container set --name $(backAppServiceQA) --resource-group $(ResourceGroupName) \
+                --container-image-name $(acrLoginServer)/$(backImageName):$(backImageTag) \
+                --container-registry-url https://$(acrLoginServer) \
+                --container-registry-user $(acrName) \
+                --container-registry-password $(az acr credential show --name $(acrName) --query "passwords[0].value" -o tsv)
+              # Set environment variables
+              az webapp config appsettings set --name $(backAppServiceQA) --resource-group $(ResourceGroupName) \
