Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ variables:
   ConnectedServiceName: 'AzureResourceManager'
   acrLoginServer: "$(acrName).azurecr.io"
   acrName: 'MirandaACR'
-  backImageName: 'employee-crud-api'
+  backImageName: 'miranda-go-api'
   backImageTag: 'latest'
   frontImageName: 'miranda-react-app'
   frontImageTag: 'latest'
@@ -32,6 +32,7 @@ variables:
 # Azure App Services
   AppServicePlanLinux: 'MirandaASP'
   backAppServiceQA: 'chattas-backend-qa'
+  frontAppServiceQA: 'chattas-frontend-qa'
 
 
 stages:
@@ -312,3 +313,35 @@ stages:
                 --container-registry-url https://$(acrLoginServer) \
                 --container-registry-user $(acrName) \
                 --container-registry-password $(az acr credential show --name $(acrName) --query "passwords[0].value" -o tsv)
+
+# -------------------------------------------------------------------------------
+# |               DEPLOY FRONT TO AZURE APP SERVICE                             |
+# -------------------------------------------------------------------------------
+    - job: DeployFrontImageToAppServiceQA
+      displayName: 'Deploy Front to Azure App Service (QA)'
+      pool:
+        vmImage: 'ubuntu-latest'
+      steps:
+        - task: AzureCLI@2
+          displayName: 'Create Front Azure App Service resource and configure image'
+          inputs:
+            azureSubscription: '$(ConnectedServiceName)'
+            scriptType: 'bash'
+            scriptLocation: 'inlineScript'
+            inlineScript: |
+              # Check if API App Service already exists
+              if ! az webapp list --query "[?name=='$(frontAppServiceQA)' && resourceGroup=='$(ResourceGroupName)'] | length(@)" -o tsv | grep -q '^1$'; then
+                echo "Front App Service doesn't exist. Creating new..."
+                # Create App Service without specifying container image
+                az webapp create --resource-group $(ResourceGroupName) --plan $(AppServicePlanLinux) --name $(frontAppServiceQA) --deployment-container-image-name "nginx"  # Especifica una imagen temporal para permitir la creación
+              else
+                echo "API App Service already exists. Updating image..."
+              fi
+
+              # Configure App Service to use Azure Container Registry (ACR)
+              az webapp config container set --name $(frontAppServiceQA) --resource-group $(ResourceGroupName) \
+                --container-image-name $(acrLoginServer)/$(frontImageName):$(frontImageTag) \
+                --container-registry-url https://$(acrLoginServer) \
+                --container-registry-user $(acrName) \
+                --container-registry-password $(az acr credential show --name $(acrName) --query "passwords[0].value" -o tsv)
+
